# leantree

./: .gitignore  README.md  pyproject.toml
dataset/: deepseek_prover_extract.py  tree_dataset.py
examples/: parse_file.py
experiments/: interlm_adapter.py  linear_rollouts.py  whole_proof_generation.py
lean-repl/REPL/: JSON.lean  Main.lean
lean-repl/REPL/Lean/: InfoTree.lean
lean-repl/REPL/PaperProof/: BetterParser.lean
leantree/: __init__.py  augmentations.py  file_span.py  metavar_graph.py  utils.py
leantree/core/: lean.py  lean_file.py  project.py  proof_tree.py
leantree/data_extraction/: file_loader.py  proof_verification.py  tree_builder.py  tree_postprocessor.py
leantree/repl_adapter/: ast_parser.py  data.py  data_extraction.py  error_metadata.py  interaction.py  process_pool.py  server.py  singleton_trees.py  start_server.py
scripts/: bench_warmup.py  build_repl.py  stress_test_server.py
tests/: conftest.py  test_ast_parser.py  test_augmentations.py  test_destroy_process_checkpoint_eviction.py  test_destroy_process_no_lock_held.py  test_interaction_assert_started.py  test_lean.py  test_lean_server.py  test_pool_invariants.py  test_pool_no_thundering_herd.py  test_preexec_rlimits.py  test_proactive_recycle_on_return.py  test_process_pool.py  test_prune_snapshots.py  test_remote_exception_roundtrip.py  test_return_process_timeout_no_leak.py  test_run_async_timeout.py  test_send_to_repl_timeout_race.py
