[project]
name = "leantree"
version = "1.0.0"
description = "REPL interaction and data extraction for Lean 4."
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.4",
    "tqdm>=4.67.0",
    "PrettyPrintTree>=2.0.1",
    "cmd2<3.0",
    "psutil>=6.1.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.21.0",
]
ml = [
    "torch>=2.2.0",
    "scipy>=1.11.3",
    "transformers>=4.36.0",
    "datasets>=2.14.5",
]

[project.scripts]
leanserver = "leantree.repl_adapter.start_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["leantree"]

[tool.hatch.build.targets.wheel.force-include]
"lean-repl" = "lean-repl"
